fix: improve element alignments and UI behaviour

--- a/src/Arkanis.Overlay.Components/wwwroot/css/shared.css
+++ b/src/Arkanis.Overlay.Components/wwwroot/css/shared.css
@@ -6,6 +6,10 @@
     height: 100%;
 }
 
+.text-justify {
+    text-align: justify;
+}
+
 .text-primary {
     color: var(--mud-palette-text-primary);
 }
